# Audio-and-video-learning-materials

./: README.md  TabLayout.java
AudioRecord录音（能暂停，将pch转换为wav）/: AndroidManifest.xml  app-debug.apk
AudioRecord录音（能暂停，将pch转换为wav）/res/layout/: activity_list.xml  activity_main.xml  adapter_file_list.xml
AudioRecord录音（能暂停，将pch转换为wav）/res/values/: strings.xml
FFmpeg(AVfilter过滤）/src/main/cpp/: native-lib.cpp
FFmpeg(MP4转yuv）/: build.gradle
FFmpeg(MP4转yuv）/src/main/res/layout/: activity_main.xml
FFmpeg播放视频/app/: build.gradle
FFmpeg播放视频/app/src/main/: AndroidManifest.xml
FFmpeg播放视频/app/src/main/cpp/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h
媒体解码MediaCodec,MediaExtractor/: AndroidManifest.xml
媒体解码MediaCodec,MediaExtractor/res/layout/: activity_main.xml
小视频录制/: AndroidManifest.xml  app-debug.apk
小视频录制/res/drawable/: libvideo_recorder_default.xml
小视频录制/res/layout/: activity_main.xml  activity_vedio_record.xml  activity_video_play.xml
小视频录制/res/values/: colors.xml  strings.xml  styles.xml
录视频/: AndroidManifest.xml  app-debug.apk
录视频/res/layout/: activity_main.xml  fragment_main.xml
录视频/res/menu/: main.xml
录音和播放PCM/: AndroidManifest.xml  app-debug.apk
录音和播放PCM/res/layout/: activity_main.xml
录音和播放PCM/res/values/: strings.xml
录音视频（有播放器不能放，而且没有时长显示）/: AndroidManifest.xml  app-debug.apk
录音视频（有播放器不能放，而且没有时长显示）/res/layout/: activity_media_muxer.xml
录音视频（有播放器不能放，而且没有时长显示）/res/values/: strings.xml
收集Camera数据，并转码为H264存储到文件/: AndroidManifest.xml  Test  app-debug.apk
收集Camera数据，并转码为H264存储到文件/res/layout/: activity_main.xml
(+47 files in other folders)
